--- a/Проект_1/StartUpMVVM/Views/CountriesStatisticView.xaml
+++ b/Проект_1/StartUpMVVM/Views/CountriesStatisticView.xaml
@@ -10,6 +10,7 @@
              xmlns:c="clr-namespace:StartUpMVVM.Infrastructure.Converters"
              xmlns:sys="clr-namespace:System;assembly=System.Runtime"
              xmlns:common="clr-namespace:StartUpMVVM.Infrastructure.Common"
+             xmlns:oxy="http://oxyplot.org/wpf/contrib"
              mc:Ignorable="d"
              d:DataContext="{d:DesignInstance vm:CountriesStatisticViewModel, d:IsDesignTimeCreatable=True}"
              d:DesignHeight="450" d:DesignWidth="800">
@@ -84,7 +85,17 @@
                               HorizontalAlignment="Stretch"
                               />
 
-                <StackPanel Grid.Row="0">
+                <oxy:Plot Grid.Row="0">
+                    <oxy:Plot.Axes>
+                        <oxy:LinearAxis Position="Left" Title="Число" MajorGridlineStyle="Solid" MinorGridlineStyle="Dash"/>
+                        <oxy:DateTimeAxis Position="Bottom" Title="Дата" MajorGridlineStyle="Solid" MinorGridlineStyle="Dash"/>
+                    </oxy:Plot.Axes>
+                    <oxy:LineSeries StrokeThickness="2" Color="Red" 
+                                    ItemsSource="{Binding SelectedCountry.Counts}"
+                                    DataFieldX="Date" DataFieldY="Count"/>
+                </oxy:Plot>
+
+                <!--<StackPanel Grid.Row="0">
                     <Slider Grid.Row="0" x:Name="Value1" Margin="5" Maximum="100" ToolTip="{Binding Value, RelativeSource={RelativeSource Self}, Converter={c:Linear K=5}}"/>
                     <Slider Grid.Row="0" x:Name="Value2" Margin="5" Maximum="100" ToolTip="{Binding Value, RelativeSource={RelativeSource Self}, Converter={c:CompositeConverter First={c:Add 5}, Second={c:Add 7}}}"/>
                     <Slider Grid.Row="0" x:Name="Value3" Margin="5" Maximum="100" ToolTip="{Binding Value, RelativeSource={RelativeSource Self}, Converter={c:CompositeConverter {c:Linear 5, 7}, {c:CompositeConverter {c:Ratio 6}, {c:Add 7}}}}"/>
@@ -93,18 +104,18 @@
 
                 <Border Grid.Row="1" DataContext="{common:StringToIntArray Str='1;2;3;4;5'}">
                     <ListBox Grid.Row="1" ItemsSource="{Binding}">
-                        <!--<ListBox.ItemsSource>
+                        --><!--<ListBox.ItemsSource>
                         <MultiBinding Converter="{StaticResource ToArrayConverter}">
                             <Binding ElementName="Value1" Path="Value"/>
                             <Binding ElementName="Value2" Path="Value"/>
                             <Binding ElementName="Value3" Path="Value"/>
                             <Binding ElementName="Value4" Path="Value"/>
                         </MultiBinding>
-                    </ListBox.ItemsSource>-->
+                    </ListBox.ItemsSource>--><!--
                     </ListBox>
                 </Border>
                 
-                <!--<Slider Grid.Row="0" x:Name="ValueSlider" Maximum="100"
+                --><!--<Slider Grid.Row="0" x:Name="ValueSlider" Maximum="100"
                         ToolTip="{Binding Value, RelativeSource={RelativeSource Self}}"
                         />
 
@@ -117,6 +128,7 @@
                                  ,Converter={StaticResource TestConverter}
                                  ,UpdateSourceTrigger=PropertyChanged}"
                            />-->
+            
             </Grid>
         </GroupBox>
 
