--- a/Проект_1/Test/WPF_TEST/MainWindow.xaml
+++ b/Проект_1/Test/WPF_TEST/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         xmlns:b="clr-namespace:WPF_TEST.Behaviors"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800"
+        Title="MainWindow" Height="360" Width="400"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         TextElement.FontWeight="Regular"
@@ -30,9 +30,22 @@
                      >                
                 <i:Interaction.Behaviors>
                     <!--<i:MouseDragElementBehavior/>-->
-                    <b:DragInCanvas/>
+                    <b:DragInCanvas x:Name="EllipseDragBehavior"/>
                 </i:Interaction.Behaviors>
             </Ellipse>
+
+            <Button Canvas.Left="220" Canvas.Top="30" Content="Закрыть">
+                <i:Interaction.Behaviors>
+                    <b:CloseWindow/>
+                </i:Interaction.Behaviors>
+            </Button>
+
+            <TextBlock Canvas.Left="10" Canvas.Top="40"
+                       Text="{Binding PositionX, ElementName=EllipseDragBehavior}"
+                       />
+            <TextBlock Canvas.Left="10" Canvas.Top="60"
+                       Text="{Binding PositionY, ElementName=EllipseDragBehavior}"
+                       />
         </Canvas>
     </Grid>
     
