--- a/Проект_1/StartUpMVVM/App.xaml
+++ b/Проект_1/StartUpMVVM/App.xaml
@@ -10,6 +10,7 @@
                 <ResourceDictionary Source="Resources/Base/Brushes.xaml"/>
                 <ResourceDictionary Source="Resources/Styles/Buttons.xaml"/>
                 <ResourceDictionary Source="Resources/Styles/GridSplitters.xaml"/>
+                <ResourceDictionary Source="Resources/Styles/WindowStyle.xaml"/>
             </ResourceDictionary.MergedDictionaries>
 
             <vm:ViewModelLocator x:Key="Locator"/>
