--- a/Проект_1/StartUpMVVM/Views/Windows/TestWindow.xaml
+++ b/Проект_1/StartUpMVVM/Views/Windows/TestWindow.xaml
@@ -5,7 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:StartUpMVVM.Views.Windows"
         mc:Ignorable="d"
-        Title="TestWindow" Height="450" Width="800">
+        Title="TestWindow" 
+        Height="450" Width="800"
+        Style="{StaticResource TestWindowStyle}"
+        >
     <Grid>
         
     </Grid>
