--- a/Projects_Examples/Проект_7/Trading.WPF/MainWindow.xaml
+++ b/Projects_Examples/Проект_7/Trading.WPF/MainWindow.xaml
@@ -15,9 +15,10 @@
         
         <controls:NavigationBar Grid.Row="0" DataContext="{Binding Navigator}"/>
 
-        <ContentControl Grid.Row="1" Content="{Binding Navigator.CurrentViewModel}">
+        <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto"
+                      HorizontalScrollBarVisibility="Disabled">
+            <ContentControl Content="{Binding Navigator.CurrentViewModel}"/>
+        </ScrollViewer>
             
-        </ContentControl>
-        
     </Grid>
 </Window>
