--- a/Projects_Examples/Проект_7/Trading.WPF/Views/BuyView.xaml
+++ b/Projects_Examples/Проект_7/Trading.WPF/Views/BuyView.xaml
@@ -6,10 +6,10 @@
              xmlns:local="clr-namespace:Trading.WPF.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Margin="20" HorizontalAlignment="Center">
+    <Grid Margin="20" >
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
 
         <WrapPanel Grid.Row="0" HorizontalAlignment="Center">
@@ -17,24 +17,28 @@
             <Button Margin="10,0,0,0" Content="Search" Command="{Binding SearchSymbolCommand}"/>
         </WrapPanel>
 
-        <WrapPanel Grid.Row="1" Margin="0,20,0,0">
-            <WrapPanel.Style>
-                <Style TargetType="WrapPanel">
+        <Grid Grid.Row="1" Margin="0,20,0,0" MaxWidth="500">
+            <Grid.Style>
+                <Style TargetType="Grid">
                     <Style.Triggers>
                         <DataTrigger Binding="{Binding SearchResultSymbol}" Value="">
                             <Setter Property="Visibility" Value="Collapsed"/>
                         </DataTrigger>
                     </Style.Triggers>
                 </Style>
-            </WrapPanel.Style>
-            <Border BorderBrush="Gray" BorderThickness="0,1,1,1" Padding="20" CornerRadius="4,0,0,4">
+            </Grid.Style>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="2*"/>
+            </Grid.ColumnDefinitions>
+            <Border Grid.Column="0" BorderBrush="Gray" BorderThickness="0,1,1,1" Padding="20" CornerRadius="4,0,0,4">
                 <StackPanel>
                     <TextBlock HorizontalAlignment="Center" FontSize="32" Text="{Binding SearchResultSymbol}"/>
                     <TextBlock HorizontalAlignment="Center" Margin="0,10,0,0" Text="{Binding StockPrice, StringFormat={}{0:C}}"/>
                 </StackPanel>
             </Border>
-            <Border BorderBrush="Gray" BorderThickness="1" Padding="20" CornerRadius="0,4,4,0">
-                <StackPanel>
+            <Border Grid.Column="1" BorderBrush="Gray" BorderThickness="1" Padding="20" CornerRadius="0,4,4,0">
+                <StackPanel HorizontalAlignment="Center">
                     <WrapPanel Margin="0,10">
                         <TextBlock Width="150" Text="Shares to buy:"/>
                         <TextBox Width="50" Text="{Binding SharesToBuy, UpdateSourceTrigger=PropertyChanged}"/>
@@ -49,9 +53,12 @@
                         FontSize="32" Margin="0,10" 
                         Text="{Binding TotalPrice, StringFormat={}{0:C}}"/>
                     
-                    <Button Margin="0,10" Content="Buy" Command="{Binding BuyStockCommand}"/>
+                    <Button 
+                        Margin="0,10" FontSize="24" 
+                        Padding="20,5" Content="Buy" 
+                        Command="{Binding BuyStockCommand}"/>
                 </StackPanel>
             </Border>
-        </WrapPanel>
+        </Grid>
     </Grid>
 </UserControl>
