--- a/Projects_Examples/Проект_7/Trading.WPF/App.xaml
+++ b/Projects_Examples/Проект_7/Trading.WPF/App.xaml
@@ -19,8 +19,13 @@
             <DataTemplate DataType="{x:Type vm:PortfolioViewModel}">
                 <v:PortfolioView/>
             </DataTemplate>
+            
             <DataTemplate DataType="{x:Type vm:BuyViewModel}">
                 <v:BuyView/>
+            </DataTemplate>
+
+            <DataTemplate DataType="{x:Type vm:LoginViewModel}">
+                <v:LoginView LoginCommand="{Binding LoginCommand}"/>
             </DataTemplate>
 
         </ResourceDictionary>
