--- a/Projects_Examples/Проект_7/Trading.WPF/MainWindow.xaml
+++ b/Projects_Examples/Проект_7/Trading.WPF/MainWindow.xaml
@@ -6,14 +6,27 @@
         xmlns:local="clr-namespace:Trading.WPF" 
         xmlns:controls="clr-namespace:Trading.WPF.Controls"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800"
+        xmlns:vm="clr-namespace:Trading.WPF.ViewModels"
+        DataContext="vm:MainViewModel">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        
-        <controls:NavigationBar Grid.Row="0" DataContext="{Binding Navigator}"/>
+
+        <Grid Grid.Row="0">
+            <Grid.Style>
+                <Style TargetType="Grid">
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding Authenticator.IsLoggedIn}" Value="False">
+                            <Setter Property="Visibility" Value="Collapsed"/>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Grid.Style>
+            <controls:NavigationBar Grid.Row="0" DataContext="{Binding Navigator}"/>
+        </Grid>
 
         <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto"
                       HorizontalScrollBarVisibility="Disabled">
