--- a/Projects_Examples/Проект_7/Trading.WPF/Views/PortfolioView.xaml
+++ b/Projects_Examples/Проект_7/Trading.WPF/Views/PortfolioView.xaml
@@ -3,11 +3,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Trading.WPF.Views"
+             xmlns:local="clr-namespace:Trading.WPF.Views" 
+             xmlns:controls="clr-namespace:Trading.WPF.Controls"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <TextBlock Text="Portfolio"/>
-
+        <controls:AssetListing DataContext="{Binding AssetListingViewModel}" />
     </Grid>
 </UserControl>
