--- a/Projects_Small&Fast/01_ Vending_Machine/VendingMachine/App.xaml
+++ b/Projects_Small&Fast/01_ Vending_Machine/VendingMachine/App.xaml
@@ -11,6 +11,39 @@
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Primary/MaterialDesignColor.DeepPurple.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Accent/MaterialDesignColor.Lime.xaml" />
             </ResourceDictionary.MergedDictionaries>
+            <Style x:Key="TitleBlock" TargetType="TextBlock">
+                <Setter Property="FontSize" Value="48"/>
+                <Setter Property="HorizontalAlignment" Value="Center"/>
+            </Style>
+            <Style x:Key="VendingList" TargetType="ListView">
+                <Setter Property="Background" Value="White"/>
+                <Setter Property="Margin" Value="5"/>
+            </Style>
+            
+            <Style x:Key="VendingButton" TargetType="Button">
+                <Setter Property="Background" Value="White"/>
+                <Setter Property="Foreground" Value="Black"/>
+                <Setter Property="Margin" Value="5"/>
+                <Setter Property="Padding" Value="5"/>
+            </Style>
+            
+            <Style x:Key="CustomerLabel" TargetType="TextBlock">
+                <Setter Property="Foreground" Value="Black"/>
+                <Setter Property="FontSize" Value="20"/>
+            </Style>
+
+            <Style x:Key="MoneyButton" TargetType="Button" 
+                   BasedOn="{StaticResource MaterialDesignFlatSecondaryLightBgButton}">
+                <Setter Property="Margin" Value="5"/>
+                <Setter Property="Padding" Value="5"/>
+            </Style>
+
+            <Style x:Key="ManagerButton" TargetType="Button"
+                   BasedOn="{StaticResource MaterialDesignFlatSecondaryLightBgButton}">
+                <Setter Property="Padding" Value="3"/>
+                <Setter Property="Margin" Value="5"/>
+            </Style>
         </ResourceDictionary>
+        
     </Application.Resources>
 </Application>
