--- a/Projects_Small&Fast/01_ Vending_Machine/VendingMachine/Views/MainWindow.xaml
+++ b/Projects_Small&Fast/01_ Vending_Machine/VendingMachine/Views/MainWindow.xaml
@@ -14,10 +14,83 @@
         TextOptions.TextRenderingMode="Auto"
         Background="{DynamicResource MaterialDesignPaper}"
         FontFamily="{DynamicResource MaterialDesignFont}">
-    
-    <Grid>
-        <materialDesign:Card Padding="32" Margin="16">
-            <TextBlock Style="{DynamicResource MaterialDesignTitleTextBlock}">My First Material Design App</TextBlock>
-        </materialDesign:Card>
+
+    <Grid Background="LightBlue">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+
+        <StackPanel Background="#FF3D6265" Grid.ColumnSpan="5">
+            <TextBlock Style="{StaticResource TitleBlock}">Toskers Vending</TextBlock>
+        </StackPanel>
+
+        <ListView Style="{StaticResource VendingList}" ItemsSource="{Binding Items}" Grid.Row="1" Grid.ColumnSpan="3" Grid.RowSpan="4" Background="#FF390808">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <DockPanel>
+                        <Button DataContext="{Binding}" Style="{StaticResource VendingButton}" DockPanel.Dock="Left" Click="Purchase_Clicked">
+                            Purchase
+                        </Button>
+                        <StackPanel DockPanel.Dock="Right">
+                            <TextBlock Style="{StaticResource CustomerLabel}" Text="{Binding Information.Name}"/>
+                            <TextBlock Style="{StaticResource CustomerLabel}" Text="{Binding Information.Price, StringFormat=${0:0.00}}"/>
+                            <TextBlock Foreground="Red" Text="Out of stock!" Visibility="{Binding OutOfStockMessage}"/>
+                        </StackPanel>
+                    </DockPanel>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+
+        <Button Style="{StaticResource MoneyButton}" Grid.Row="5" Click="Insert25_Clicked">
+            $0.25
+        </Button>
+        <Button Style="{StaticResource MoneyButton}" Grid.Row="5" Grid.Column="1" Click="Insert50_Clicked">
+            $0.50
+        </Button>
+        <Button Style="{StaticResource MoneyButton}" Grid.Row="5" Grid.Column="2" Click="Insert75_Clicked">
+            $0.75
+        </Button>
+
+        <StackPanel Grid.Row="6" Grid.ColumnSpan="3">
+            <TextBlock Style="{StaticResource CustomerLabel}" Text="{Binding Bank.Inserted,  StringFormat=Inserted ${0:0.00}}" />
+            <TextBlock Style="{StaticResource CustomerLabel}" Text="{Binding Bank.Change,  StringFormat=Change ${0:0.00}}" />
+        </StackPanel>
+
+        <DockPanel Margin="5" Grid.Row="1" Grid.Column="3" Grid.ColumnSpan="2" Grid.RowSpan="3" Background="#FF3D6265">
+            <TextBlock DockPanel.Dock="Bottom" Style="{StaticResource CustomerLabel}" Text="{Binding Bank.BankTotal, StringFormat=Earnings ${0:0.00}}"/>
+            <TextBlock DockPanel.Dock="Top" FontSize="28" Style="{StaticResource CustomerLabel}" HorizontalAlignment="Center">Inventory</TextBlock>
+            <StackPanel DockPanel.Dock="Bottom">
+                <TextBlock Margin="5" Style="{StaticResource CustomerLabel}" FontSize="16" Text="{Binding Items[0].InventoryDisplay}" />
+                <TextBlock Margin="5" Style="{StaticResource CustomerLabel}" FontSize="16" Text="{Binding Items[1].InventoryDisplay}" />
+                <TextBlock Margin="5" Style="{StaticResource CustomerLabel}" FontSize="16" Text="{Binding Items[2].InventoryDisplay}" />
+                <TextBlock Margin="5" Style="{StaticResource CustomerLabel}" FontSize="16" Text="{Binding Items[3].InventoryDisplay}" />
+            </StackPanel>
+        </DockPanel>
+
+        <StackPanel Grid.Row="4" Grid.Column="3" Grid.ColumnSpan="2" Grid.RowSpan="3" Background="DarkKhaki">
+            <TextBlock DockPanel.Dock="Top" FontSize="28" Style="{StaticResource CustomerLabel}" HorizontalAlignment="Center">Manager</TextBlock>
+            <Button Style="{StaticResource ManagerButton}" Click="Refill_Clicked">
+                Refill Supply
+            </Button>
+            <Button Style="{StaticResource ManagerButton}" Click="Empty_Clicked">
+                Empty Supply
+            </Button>
+            <Button Style="{StaticResource ManagerButton}" Click="Withdraw_Clicked">
+                Withdraw Payment
+            </Button>
+        </StackPanel>
     </Grid>
 </Window>
