--- a/Projects_Examples/Проект_8/ContactBook/App.xaml
+++ b/Projects_Examples/Проект_8/ContactBook/App.xaml
@@ -12,6 +12,9 @@
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Primary/MaterialDesignColor.DeepPurple.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Accent/MaterialDesignColor.Lime.xaml" />
             </ResourceDictionary.MergedDictionaries>
+            
+            <!--Кнопки-->
+            
         </ResourceDictionary>
     </Application.Resources>
 </Application>
