--- a/Projects_Examples/Проект_8/ContactBook/Views/MainWindow.xaml
+++ b/Projects_Examples/Проект_8/ContactBook/Views/MainWindow.xaml
@@ -24,8 +24,53 @@
     </Window.DataContext>
     
     <DockPanel>
-        <Grid DockPanel.Dock="Top">
+        <Grid DockPanel.Dock="Top" 
+              MinHeight="40" 
+              Background="{DynamicResource MaterialDesignFlatButtonRipple}">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="auto"/>
+            </Grid.ColumnDefinitions>
+
+            <Button Grid.Column="0" 
+                    Margin="3,0,3,0"
+                    Content="Избранное"
+                    >
+                
+            </Button>
+
+            <Button Grid.Column="1" Content="Контакты">
+            </Button>
             
+            <StackPanel 
+                Grid.Column="3" 
+                Orientation="Horizontal"
+                HorizontalAlignment="Right" 
+                Cursor="Hand">
+
+                <!--Добавление-->
+                <Button Margin="3,0,0,0">
+                    <Button.Content>
+                        <mi:MaterialIcon Kind="AddCall" Height="30" Width="30"/>
+                    </Button.Content>
+                </Button>
+
+                <!--Редактирование-->
+                <Button Margin="3,0,0,0" Cursor="Hand">
+                    <Button.Content>
+                        <mi:MaterialIcon Kind="Edit"  Height="30" Width="30" />
+                    </Button.Content>
+                </Button>
+
+                <!--Удаление-->
+                <Button Margin="3,0,3,0">
+                    <Button.Content>
+                        <mi:MaterialIcon Kind="Delete" Height="30" Width="30" />
+                    </Button.Content>
+                </Button>
+            </StackPanel>
         </Grid>
 
         <Grid DockPanel.Dock="Bottom">
